--- a/printer.cfg
+++ b/printer.cfg
@@ -27,6 +27,8 @@
 
 ## KAMP
 [include KAMP_Settings.cfg]
+[include printer_hotend.cfg]
+[include printer_macros.cfg]
 
 ## Happy Hare
 #[include mmu/base/*.cfg]
@@ -42,14 +44,6 @@ restart_method: command
 [mcu rpi]
 serial: /tmp/klipper_host_mcu
 
-[adxl345]
-cs_pin: rpi:None
-
-[resonance_tester]
-accel_chip: adxl345
-probe_points:
-    100, 100, 20  # an example
-
 [printer]
 kinematics: corexy
 max_velocity: 300  
@@ -62,9 +56,6 @@ square_corner_velocity: 5.0
 #   X/Y Stepper Settings
 #####################################################################
 
-##  B Stepper - Left
-##  Connected to MOTOR_0
-##  Endstop connected to DIAG_0
 [stepper_x]
 step_pin: PF13
 dir_pin: PF12
@@ -72,28 +63,14 @@ enable_pin: !PF14
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
-endstop_pin: PG6
+endstop_pin: hotend:gpio24
 position_min: 0
-##--------------------------------------------------------------------
-
-##  Uncomment below for 250mm build
-#position_endstop: 250
-#position_max: 250
-
-##  Uncomment for 300mm build
-#position_endstop: 300
-#position_max: 300
-
-#  Uncomment for 350mm build
 position_endstop: 350
 position_max: 350
-
-##--------------------------------------------------------------------
 homing_speed: 25   #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
-##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_x]
 uart_pin: PC4
 interpolate: false
@@ -101,9 +78,6 @@ run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
-##  A Stepper - Right
-##  Connected to MOTOR_1
-##  Endstop connected to DIAG_1
 [stepper_y]
 step_pin: PG0
 dir_pin: PG1
@@ -113,26 +87,12 @@ microsteps: 32
 full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
 endstop_pin: PG9
 position_min: 0
-##--------------------------------------------------------------------
-
-##  Uncomment for 250mm build
-#position_endstop: 250
-#position_max: 250
-
-##  Uncomment for 300mm build
-#position_endstop: 300
-#position_max: 300
-
-#  Uncomment for 350mm build
 position_endstop: 356
 position_max: 356
-
-##--------------------------------------------------------------------
 homing_speed: 25  #Max 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
-##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_y]
 uart_pin: PD11
 interpolate: false
@@ -144,9 +104,6 @@ stealthchop_threshold: 0
 #   Z Stepper Settings
 #####################################################################
 
-## Z0 Stepper - Front Left
-##  Connected to MOTOR_2
-##  Endstop connected to DIAG_2
 [stepper_z]
 step_pin: PF11
 dir_pin: PG3
@@ -155,30 +112,13 @@ rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 32
 endstop_pin: PG15
-##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
-##  (+) value = endstop above Z0, (-) value = endstop below
-##  Increasing position_endstop brings nozzle closer to the bed
-##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-# position_endstop: -0.5
 endstop_pin: probe:z_virtual_endstop
-##--------------------------------------------------------------------
-
-##  Uncomment below for 250mm build
-#position_max: 210
-
-##  Uncomment below for 300mm build
-#position_max: 260
-
-##  Uncomment below for 350mm build
 position_max: 310
-
-##--------------------------------------------------------------------
 position_min: -8
 homing_speed: 8
 second_homing_speed: 3
 homing_retract_dist: 3
 
-##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z]
 uart_pin: PC6
 interpolate: false
@@ -186,8 +126,6 @@ run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 999999
 
-##  Z1 Stepper - Rear Left
-##  Connected to MOTOR_3
 [stepper_z1]
 step_pin: PG4
 dir_pin: !PC1
@@ -196,7 +134,6 @@ rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 32
 
-##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z1]
 uart_pin: PC7
 interpolate: false
@@ -204,8 +141,6 @@ run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 999999
 
-##  Z2 Stepper - Rear Right
-##  Connected to MOTOR_4
 [stepper_z2]
 step_pin: PF9
 dir_pin: PF10
@@ -214,7 +149,6 @@ rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 32
 
-##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z2]
 uart_pin: PF2
 interpolate: false
@@ -222,8 +156,6 @@ run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 999999
 
-##  Z3 Stepper - Front Right
-##  Connected to MOTOR_5
 [stepper_z3]
 step_pin: PC13
 dir_pin: !PF0
@@ -232,70 +164,12 @@ rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 32
 
-##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z3]
 uart_pin: PE4
 interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 999999
-
-
-#####################################################################
-#   Extruder
-#####################################################################
-
-##  Connected to MOTOR_6
-##  Heater - HE0
-##  Thermistor - T0
-[extruder]
-step_pin: PE2
-dir_pin: PE3
-enable_pin: !PD4
-##  Update value below when you perform extruder calibration
-##  If you ask for 100mm of filament, but in reality it is 98mm:
-##  rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
-##  22.6789511 is a good starting point
-rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
-##  Update Gear Ratio depending on your Extruder Type
-##  Use 50:10 for Stealthburner/Clockwork 2
-##  Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
-##  Use 80:20 for M4, M3.1
-gear_ratio: 50:10               #BMG Gear Ratio
-microsteps: 32
-full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
-nozzle_diameter: 0.400
-filament_diameter: 1.75
-max_extrude_only_distance: 100
-max_extrude_cross_section: 200
-max_extrude_cross_section: 50
-heater_pin: PA2
-## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
-## Use "Generic 3950" for NTC 100k 3950 thermistors
-sensor_type: ATC Semitec 104NT-4-R025H42G
-sensor_pin: PF4
-min_temp: 10
-max_temp: 270
-max_power: 1.0
-min_extrude_temp: 170.00
-control = pid
-pid_kp = 26.213
-pid_ki = 1.304
-pid_kd = 131.721
-##  Try to keep pressure_advance below 1.0
-#pressure_advance: 0.05
-##  Default is 0.040, leave stock
-#pressure_advance_smooth_time: 0.040
-
-##  E0 on MOTOR6
-##  Make sure to update below for your relevant driver (2208 or 2209)
-[tmc2209 extruder]
-uart_pin: PE1
-interpolate: false
-run_current: 0.5
-sense_resistor: 0.110
-stealthchop_threshold: 0
-
 
 #####################################################################
 #   Bed Heater
@@ -306,97 +180,36 @@ stealthchop_threshold: 0
 ##  Thermistor - TB
 [heater_bed]
 heater_pin: PA1
-##  Validate the following thermistor type to make sure it is correct
-##  Keenovo branded bed heaters should use Generic 3950
-##  LDO branded bed heaters will have the sensor type labelled on the heater
-## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
-## Use "Generic 3950" for Keenovo heaters
 sensor_type: ATC Semitec 104NT-4-R025H42G
 sensor_pin: PF3
 ##  Adjust Max Power so your heater doesn't warp your bed. Rule of thumb is 0.4 watts / cm^2 .
 max_power: 0.6
 min_temp: 0
 max_temp: 120
-control: pid
-pid_kp: 58.437
-pid_ki: 2.347
-pid_kd: 363.769
-
-#####################################################################
-#   Probe
-#####################################################################
-
-##  Inductive Probe
-##  This probe is not used for Z height, only Quad Gantry Leveling
-[probe]
-pin: !PG15
-x_offset: 0
-y_offset: 0
-#z_offset: 0
-speed: 3.0
-lift_speed: 15
-samples: 3
-samples_result: median
-sample_retract_dist: 3.0
-samples_tolerance: 0.006
-samples_tolerance_retries: 3
-activate_gcode:
-    {% set PROBE_TEMP = 150 %}
-    {% set MAX_TEMP = PROBE_TEMP + 5 %}
-    {% set ACTUAL_TEMP = printer.extruder.temperature %}
-    {% set TARGET_TEMP = printer.extruder.target %}
-
-    {% if TARGET_TEMP > PROBE_TEMP %}
-        { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
-        M109 S{ PROBE_TEMP }
-    {% else %}
-        # Temperature target is already low enough, but nozzle may still be too hot.
-        {% if ACTUAL_TEMP > MAX_TEMP %}
-            { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
-            TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
-        {% endif %}
-    {% endif %}
+#control: pid
+#pid_kp: 58.437
+#pid_ki: 2.347
+#pid_kd: 363.769
 
 #####################################################################
 #   Fan Control
 #####################################################################
 
-##  Print Cooling Fan - FAN0
-[fan]
-pin: PA8
-kick_start_time: 0.5
-##  Depending on your fan, you may need to increase this value
-##  if your fan will not start. Can change cycle_time (increase)
-##  if your fan is not able to slow down effectively
-off_below: 0.10
-
-
-##  Hotend Fan - FAN1
-[heater_fan hotend_fan]
-pin: PE5
-max_power: 1.0
-kick_start_time: 0.5
-heater: extruder
-heater_temp: 50.0
-##  If you are experiencing back flow, you can reduce fan_speed
-#fan_speed: 1.0
-
 ##  Controller fan - FAN2
 [controller_fan controller_fan]
 pin: PD12
 kick_start_time: 0.5
-heater: heater_bed
 fan_speed: 0.5
 
-##  Exhaust fan - FAN3
-#[heater_fan exhaust_fan]
-#pin: PD13
-#max_power: 1.0
-#shutdown_speed: 0.0
-#kick_start_time: 5.0
-#heater: heater_bed
-#heater_temp: 60
-#fan_speed: 1.0
+##  Filter fan - FAN3
+[heater_fan filter_fan]
+pin: PD13
+max_power: 1.0
+shutdown_speed: 0.0
+kick_start_time: 5.0
+heater: heater_bed
+heater_temp: 75
+fan_speed: 1.0
 
 #####################################################################
 #   LED Control
@@ -410,27 +223,15 @@ shutdown_value: 0
 value:1
 cycle_time: 0.01
 
-[neopixel headlight]
-## Stealthburner lighting - RGB_LED
-pin: PB0
-chain_count: 3
-color_order: GRBW
-initial_RED: 0.0
-initial_GREEN: 0.0
-initial_BLUE: 0.0
-initial_WHITE: 1.0
-
-#####################################################################
-#   Additional Sensors
-#####################################################################
-
-[temperature_sensor chamber_temp]
-## Chamber Temperature - T1
-sensor_type: ATC Semitec 104NT-4-R025H42G
-sensor_pin: PF5
-min_temp: 0
-max_temp: 100
-gcode_id: chamber_th
+# [neopixel headlight]
+# ## Stealthburner lighting - RGB_LED
+# pin: PB0
+# chain_count: 3
+# color_order: GRBW
+# initial_RED: 0.0
+# initial_GREEN: 0.0
+# initial_BLUE: 0.0
+# initial_WHITE: 1.0
 
 #####################################################################
 #   Homing and Gantry Adjustment Routines
@@ -440,10 +241,6 @@ gcode_id: chamber_th
 timeout: 1800
 
 [safe_z_home]
-##  XY Location of the Z Endstop Switch
-##  Update -10,-10 to the XY coordinates of your endstop pin 
-##  (such as 157,305) after going through Z Endstop Pin
-##  Location Definition step.
 home_xy_position:175,175
 speed:100
 z_hop:10
@@ -455,32 +252,6 @@ z_hop_speed:10
 ##  MAX (250, 250), (300,300), or (350,350) depending on your printer size
 ##  to respective belt positions
 [quad_gantry_level]
-
-#--------------------------------------------------------------------
-##  Gantry Corners for 250mm Build
-##  Uncomment for 250mm build
-#gantry_corners:
-#   -60,-10
-#   310, 320
-##  Probe points
-#points:
-#   50,25
-#   50,175
-#   200,175
-#   200,25
-    
-##  Gantry Corners for 300mm Build
-##  Uncomment for 300mm build
-#gantry_corners:
-#   -60,-10
-#   360,370
-##  Probe points
-#points:
-#   50,25
-#   50,225
-#   250,225
-#   250,25
-
 ##  Gantry Corners for 350mm Build
 ##  Uncomment for 350mm build
 gantry_corners:
@@ -529,149 +300,6 @@ aliases:
     EXP2_7=PC15, EXP2_8=<RST>,
     EXP2_9=<GND>, EXP2_10=<5V>
 
-#####################################################################
-#   Displays
-#####################################################################
-
-#[display]
-##  mini12864 LCD Display
-#lcd_type: uc1701
-#cs_pin: EXP1_3
-#a0_pin: EXP1_4
-#rst_pin: EXP1_5
-#encoder_pins: ^EXP2_5, ^EXP2_3
-#click_pin: ^!EXP1_2
-#contrast: 63
-#spi_software_miso_pin: EXP2_1
-#spi_software_mosi_pin: EXP2_6
-#spi_software_sclk_pin: EXP2_2
-
-#[neopixel btt_mini12864]
-##  To control Neopixel RGB in mini12864 display
-#pin: EXP1_6
-#chain_count: 3
-#initial_RED: 0.1
-#initial_GREEN: 0.5
-#initial_BLUE: 0.0
-#color_order: RGB
-
-###  Set RGB values on boot up for each Neopixel. 
-###  Index 1 = display, Index 2 and 3 = Knob
-#[delayed_gcode setdisplayneopixel]
-#initial_duration: 1
-#gcode:
-#        SET_LED LED=btt_mini12864 RED=1 GREEN=1 BLUE=1 INDEX=1 TRANSMIT=0
-#        SET_LED LED=btt_mini12864 RED=1 GREEN=0 BLUE=0 INDEX=2 TRANSMIT=0
-#        SET_LED LED=btt_mini12864 RED=1 GREEN=0 BLUE=0 INDEX=3 
-
-#--------------------------------------------------------------------
-
-
-#####################################################################
-#   Macros
-#####################################################################
-
-[gcode_macro G32]
-gcode:
-    SAVE_GCODE_STATE NAME=STATE_G32
-    G90
-    G28
-    QUAD_GANTRY_LEVEL
-    G28
-    ##  Uncomment for for your size printer:
-    #--------------------------------------------------------------------
-    ##  Uncomment for 250mm build
-    #G0 X125 Y125 Z30 F3600
-    
-    ##  Uncomment for 300 build
-    #G0 X150 Y150 Z30 F3600
-    
-    ##  Uncomment for 350mm build
-    G0 X175 Y175 Z30 F3600
-    #--------------------------------------------------------------------
-    RESTORE_GCODE_STATE NAME=STATE_G32
-
-   
-#   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
-[gcode_macro PRINT_START]
-gcode:
-    {% set FINAL_TEMP = params.EXTRUDER %}
-    M104 S150
-    M190 S{params.BED}
-    SKEW_PROFILE LOAD=CaliFlower
-    G32                            ; home all axes
-    BED_MESH_CALIBRATE
-    BED_MESH_PROFILE LOAD=default
-    G90                            ; absolute positioning
-    G1 Z20 F3000                   ; move nozzle away from bed
-    M109 S{FINAL_TEMP}
-    G1 E5.0 F2500
-    SWIPE
-
-
-#   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
-[gcode_macro PRINT_END]
-gcode:
-    # safe anti-stringing move coords
-    {% set th = printer.toolhead %}
-    {% set x_safe = th.position.x + 20 * (1 if th.axis_maximum.x - th.position.x > 20 else -1) %}
-    {% set y_safe = th.position.y + 20 * (1 if th.axis_maximum.y - th.position.y > 20 else -1) %}
-    {% set z_safe = [th.position.z + 25, th.axis_maximum.z]|min %}
-    
-    SAVE_GCODE_STATE NAME=STATE_PRINT_END
-    
-    M400                           ; wait for buffer to clear
-    G92 E0                         ; zero the extruder
-    G1 E-5.0 F1800                 ; retract filament
-    
-    TURN_OFF_HEATERS
-    
-    G90                                      ; absolute positioning
-    G0 X{x_safe} Y{y_safe} Z{z_safe} F20000  ; move nozzle to remove stringing
-    G0 X{th.axis_maximum.x//2} Y{th.axis_maximum.y - 2} F3600  ; park nozzle at rear
-    M107                                     ; turn off fan
-
-    SET_SKEW CLEAR=1
-    BED_MESH_CLEAR
-    RESTORE_GCODE_STATE NAME=STATE_PRINT_END
-
-[gcode_macro SWIPE]
-variable_start_x: 100
-variable_start_y: 355
-variable_start_z: 3
-
-variable_wipe_dist: 20
-variable_wipe_qty: 4
-variable_wipe_spd: 200
-variable_raise_distance: 10
-
-gcode:
- {% if "xyz" not in printer.toolhead.homed_axes %}
-   CG28
- {% endif %}
- 
- G90                                            ; absolute positioning
- ## Move nozzle to start position
- G1 X{start_x} F6000
- G1 Y{start_y} F6000
- G1 Z{start_z} F1500
-
- ## Wipe nozzle
- {% for wipes in range(1, (wipe_qty + 1)) %}
-   G1 X{start_x + wipe_dist} F{wipe_spd * 60}
-   G1 X{start_x} F{wipe_spd * 60}
- {% endfor %}
-
- ## Raise nozzle
- G1 Z{raise_distance}
- G1 X175 Y175 F6000
- 
-[gcode_macro CG28]
-gcode:
- {% if "x" not in printer.toolhead.homed_axes or "y" not in printer.toolhead.homed_axes or "z" not in printer.toolhead.homed_axes %}
- G28
- {% endif %}
-
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
@@ -681,10 +309,10 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.013750, 0.016250, 0.031250, 0.007500
-#*# 	  -0.031250, 0.006250, 0.007500, -0.005000
-#*# 	  -0.013750, 0.005000, 0.023750, -0.001250
-#*# 	  0.011250, 0.025000, 0.056250, 0.035000
+#*# 	-0.013750, 0.016250, 0.031250, 0.007500
+#*# 	-0.031250, 0.006250, 0.007500, -0.005000
+#*# 	-0.013750, 0.005000, 0.023750, -0.001250
+#*# 	0.011250, 0.025000, 0.056250, 0.035000
 #*# x_count = 4
 #*# y_count = 4
 #*# mesh_x_pps = 2
@@ -706,3 +334,9 @@ gcode:
 #*# xy_skew = -0.0003006464120904808
 #*# xz_skew = 0.0
 #*# yz_skew = 0.0
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 43.023
+#*# pid_ki = 0.722
+#*# pid_kd = 640.506
