update for can hotend

--- a/printer_hotend.cfg
+++ b/printer_hotend.cfg
@@ -21,19 +21,20 @@ spi_software_miso_pin: hotend:gpio3
 axes_map: z,-y,x
 
 [resonance_tester]
-probe_points: 100, 100, 20
+probe_points: 175, 175, 20
 accel_chip: adxl345
 
 [extruder]
 enable_pin: !hotend:gpio17
 step_pin: hotend:gpio18
 dir_pin: hotend:gpio19
-rotation_distance: 22.6789511
+rotation_distance: 21.945
 gear_ratio: 50:10
 microsteps: 32
 full_steps_per_rotation: 200
 nozzle_diameter: 0.400
 filament_diameter: 1.750
+max_extrude_only_distance: 125
 
 # hotend
 heater_pin: hotend:gpio7
@@ -45,7 +46,7 @@ pid_ki = 1.304
 pid_kd = 131.721
 min_temp: 10
 min_extrude_temp: 170.00
-max_temp: 250
+max_temp: 300
 max_power: 1.0
 
 [tmc2209 extruder]
