--- a/printer.cfg
+++ b/printer.cfg
@@ -182,7 +182,6 @@ stealthchop_threshold: 999999
 heater_pin: PA1
 sensor_type: ATC Semitec 104NT-4-R025H42G
 sensor_pin: PF3
-##  Adjust Max Power so your heater doesn't warp your bed. Rule of thumb is 0.4 watts / cm^2 .
 max_power: 0.6
 min_temp: 0
 max_temp: 120
@@ -190,6 +189,9 @@ max_temp: 120
 #pid_kp: 58.437
 #pid_ki: 2.347
 #pid_kd: 363.769
+
+[verify_heater heater_bed]
+check_gain_time: 90
 
 #####################################################################
 #   Fan Control
@@ -304,25 +306,24 @@ aliases:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [probe]
-#*# z_offset = -0.660
+#*# z_offset = -0.740
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.013750, 0.016250, 0.031250, 0.007500
-#*# 	-0.031250, 0.006250, 0.007500, -0.005000
-#*# 	-0.013750, 0.005000, 0.023750, -0.001250
-#*# 	0.011250, 0.025000, 0.056250, 0.035000
-#*# x_count = 4
-#*# y_count = 4
+#*# 	0.029504, 0.030754, 0.024504
+#*# 	0.023254, 0.023254, 0.019504
+#*# 	0.019504, 0.023254, 0.024504
+#*# x_count = 3
+#*# y_count = 3
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 87.04
-#*# max_x = 261.73
-#*# min_y = 88.7
-#*# max_y = 261.56
+#*# min_x = 155.41
+#*# max_x = 193.37
+#*# min_y = 141.48000000000002
+#*# max_y = 208.72000000000003
 #*#
 #*# [input_shaper]
 #*# shaper_type_x = ei
