--- a/printer_macros.cfg
+++ b/printer_macros.cfg
@@ -35,27 +35,16 @@ gcode:
     G28
     QUAD_GANTRY_LEVEL
     G28
-    ##  Uncomment for for your size printer:
-    #--------------------------------------------------------------------
-    ##  Uncomment for 250mm build
-    #G0 X125 Y125 Z30 F3600
-    
-    ##  Uncomment for 300 build
-    #G0 X150 Y150 Z30 F3600
-    
-    ##  Uncomment for 350mm build
     G0 X175 Y175 Z30 F3600
-    #--------------------------------------------------------------------
     RESTORE_GCODE_STATE NAME=STATE_G32
 
    
-#   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 [gcode_macro PRINT_START]
 gcode:
     {% set FINAL_TEMP = params.EXTRUDER %}
-    M104 S150
-    M190 S{params.BED}
-    SKEW_PROFILE LOAD=CaliFlower
+    M104 S150                      ; set initial nozzle temp
+    M190 S{params.BED}             ; set and wait for bed to hit temp
+    # SKEW_PROFILE LOAD=CaliFlower
     G32                            ; home all axes
     BED_MESH_CALIBRATE
     BED_MESH_PROFILE LOAD=default
