--- a/printer.cfg
+++ b/printer.cfg
@@ -28,6 +28,7 @@
 ## KAMP
 [include KAMP_Settings.cfg]
 [include printer_hotend.cfg]
+[include printer_homing.cfg]
 [include printer_macros.cfg]
 
 ## Happy Hare
@@ -63,16 +64,19 @@ enable_pin: !PF14
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
-endstop_pin: hotend:gpio24
+# endstop_pin: hotend:gpio24
+endstop_pin: tmc2209_stepper_x:virtual_endstop
 position_min: 0
 position_endstop: 350
 position_max: 350
-homing_speed: 25   #Max 100
-homing_retract_dist: 5
+homing_speed: 80   #Max 100
+homing_retract_dist: 0
 homing_positive_dir: true
 
 [tmc2209 stepper_x]
 uart_pin: PC4
+diag_pin: ^PG6
+driver_SGTHRS: 255
 interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
@@ -85,21 +89,27 @@ enable_pin: !PF15
 rotation_distance: 40
 microsteps: 32
 full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
-endstop_pin: PG9
+# endstop_pin: PG9
+endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_min: 0
 position_endstop: 356
 position_max: 356
-homing_speed: 25  #Max 100
-homing_retract_dist: 5
+homing_speed: 80  #Max 100
+homing_retract_dist: 0
 homing_positive_dir: true
 
 [tmc2209 stepper_y]
 uart_pin: PD11
+diag_pin: ^PG9
+driver_SGTHRS: 255
 interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
- 
+
+[force_move]
+enable_force_move: true
+
 #####################################################################
 #   Z Stepper Settings
 #####################################################################
@@ -242,11 +252,11 @@ cycle_time: 0.01
 [idle_timeout]
 timeout: 1800
 
-[safe_z_home]
-home_xy_position:175,175
-speed:100
-z_hop:10
-z_hop_speed:10
+# [safe_z_home]
+# home_xy_position:175,175
+# speed:100
+# z_hop:10
+# z_hop_speed:10
 
 
 ##  Use QUAD_GANTRY_LEVEL to level a gantry.
