--- a/moonraker.conf
+++ b/moonraker.conf
@@ -13,6 +13,7 @@ enable_object_processing: True
 [authorization]
 cors_domains:
     https://my.mainsail.xyz
+    https://v24.internal.parkervcp.com
     http://my.mainsail.xyz
     http://*.local
     http://*.lan
@@ -58,7 +59,6 @@ managed_services: klipper
 ### Don't forget to include timelapse.cfg to your printer.cfg
 ### Uncomment to enable moonraker-timelapse
 
-
 #[update_manager timelapse]
 #type: git_repo
 #primary_branch: main
@@ -98,14 +98,14 @@ requirements: scripts/KlipperScreen-requirements.txt
 install_script: scripts/KlipperScreen-install.sh
 managed_services: KlipperScreen
 
-[update_manager Klipper-Adaptive-Meshing-Purging]
-type: git_repo
-channel: dev
-path: ~/Klipper-Adaptive-Meshing-Purging
-origin: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging.git
-managed_services: klipper
-primary_branch: main
+# [update_manager Klipper-Adaptive-Meshing-Purging]
+# type: git_repo
+# channel: dev
+# path: ~/Klipper-Adaptive-Meshing-Purging
+# origin: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging.git
+# managed_services: klipper
+# primary_branch: main
 
-[mmu_server]
-enable_file_preprocessor: False
+# [mmu_server]
+# enable_file_preprocessor: False
 
