--- a/printer_hotend.cfg
+++ b/printer_hotend.cfg
@@ -28,7 +28,7 @@ accel_chip: adxl345
 enable_pin: !hotend:gpio17
 step_pin: hotend:gpio18
 dir_pin: hotend:gpio19
-rotation_distance: 21.945
+rotation_distance: 22.6789511
 gear_ratio: 50:10
 microsteps: 32
 full_steps_per_rotation: 200
@@ -45,7 +45,7 @@ pid_kp = 26.213
 pid_ki = 1.304
 pid_kd = 131.721
 min_temp: 10
-min_extrude_temp: 170.00
+min_extrude_temp: 10.00
 max_temp: 300
 max_power: 1.0
 
@@ -113,3 +113,6 @@ activate_gcode:
 
 [filament_switch_sensor toolhead_sensor]
 switch_pin: hotend:gpio6
+
+[filament_switch_sensor pre_extruder]
+switch_pin: hotend:gpio24
