--- a/printer_macros.cfg
+++ b/printer_macros.cfg
@@ -44,10 +44,9 @@ gcode:
     {% set FINAL_TEMP = params.EXTRUDER %}
     M104 S150                      ; set initial nozzle temp
     M190 S{params.BED}             ; set and wait for bed to hit temp
-    # SKEW_PROFILE LOAD=CaliFlower
+    SKEW_PROFILE LOAD=CaliFlower
     G32                            ; home all axes
-    BED_MESH_CALIBRATE
-    BED_MESH_PROFILE LOAD=default
+    BED_MESH_CALIBRATE ADAPTIVE=1
     G90                            ; absolute positioning
     G1 Z20 F3000                   ; move nozzle away from bed
     M109 S{FINAL_TEMP}
