--- a/printer.cfg
+++ b/printer.cfg
@@ -25,8 +25,7 @@
 [exclude_object]
 [skew_correction] 
 
-## KAMP
-[include KAMP_Settings.cfg]
+# just printer things
 [include printer_hotend.cfg]
 [include printer_homing.cfg]
 [include printer_macros.cfg]
@@ -42,8 +41,8 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_2A0023001350335331383820-if00
 restart_method: command
 ##--------------------------------------------------------------------
 
-[mcu rpi]
-serial: /tmp/klipper_host_mcu
+# [mcu rpi]
+# serial: =
 
 [printer]
 kinematics: corexy
@@ -66,9 +65,9 @@ microsteps: 32
 full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
 # endstop_pin: hotend:gpio24
 endstop_pin: tmc2209_stepper_x:virtual_endstop
-position_min: 0
-position_endstop: 350
-position_max: 350
+position_min: -10
+position_endstop: 355
+position_max: 355
 homing_speed: 80   #Max 100
 homing_retract_dist: 0
 homing_positive_dir: true
@@ -76,7 +75,7 @@ homing_positive_dir: true
 [tmc2209 stepper_x]
 uart_pin: PC4
 diag_pin: ^PG6
-driver_SGTHRS: 255
+driver_SGTHRS: 125
 interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
@@ -92,8 +91,8 @@ full_steps_per_rotation:400  #set to 200 for 1.8 degree stepper
 # endstop_pin: PG9
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_min: 0
-position_endstop: 356
-position_max: 356
+position_endstop: 357
+position_max: 357
 homing_speed: 80  #Max 100
 homing_retract_dist: 0
 homing_positive_dir: true
@@ -101,7 +100,7 @@ homing_positive_dir: true
 [tmc2209 stepper_y]
 uart_pin: PD11
 diag_pin: ^PG9
-driver_SGTHRS: 255
+driver_SGTHRS: 175
 interpolate: false
 run_current: 0.8
 sense_resistor: 0.110
@@ -190,8 +189,9 @@ stealthchop_threshold: 999999
 ##  Thermistor - TB
 [heater_bed]
 heater_pin: PA1
-sensor_type: ATC Semitec 104NT-4-R025H42G
-sensor_pin: PF3
+# sensor_type: ATC Semitec 104NT-4-R025H42G
+sensor_type: Generic 3950
+sensor_pin: PF4
 max_power: 0.6
 min_temp: 0
 max_temp: 120
@@ -284,12 +284,13 @@ retry_tolerance: 0.0075
 max_adjust: 10
 
 [bed_mesh]
-speed: 100
+speed: 120
 horizontal_move_z: 10
 probe_count: 5,5
 algorithm: bicubic
 mesh_min: 10,10
 mesh_max: 340,340
+adaptive_margin: 5
 
 
 ########################################
@@ -316,24 +317,24 @@ aliases:
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [probe]
-#*# z_offset = -0.740
+#*# z_offset = -0.780
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.029504, 0.030754, 0.024504
-#*# 	0.023254, 0.023254, 0.019504
-#*# 	0.019504, 0.023254, 0.024504
+#*# 	  -0.047500, -0.005000, 0.005000
+#*# 	  -0.038750, 0.001250, -0.001250
+#*# 	  -0.025000, 0.000000, -0.022500
 #*# x_count = 3
 #*# y_count = 3
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 155.41
-#*# max_x = 193.37
-#*# min_y = 141.48000000000002
-#*# max_y = 208.72000000000003
+#*# min_x = 131.13
+#*# max_x = 217.97
+#*# min_y = 130.71
+#*# max_y = 218.65
 #*#
 #*# [input_shaper]
 #*# shaper_type_x = ei
@@ -351,3 +352,8 @@ aliases:
 #*# pid_kp = 43.023
 #*# pid_ki = 0.722
 #*# pid_kd = 640.506
+#*#
+#*# [skew_correction calibrated]
+#*# xy_skew = 0.002606522940280044
+#*# xz_skew = 0.0
+#*# yz_skew = 0.0
